runtime-configs/tpk8s/tanzu-config/ingress-egress.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: APP_NAME-route
  namespace: default
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: main
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: APP_NAME
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
